@@ -1,5 +1,6 @@
 CHANGES IN VERSION 2.5.5
 ------------------------
+ o update show method of compareClusterResult <2016-03-06, Sun> 
  o fixed R check <2016-03-06, Sun>
  o update ReactomePA citation info <2016-02-17, Wed>
 
